// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the UI as expected 1`] = `
<section
  className="lightBlueBackground"
>
  <div
    className="lightBlueBackground sticky"
  >
    <div
      className="charts sticky cloudBlueBackground"
    >
      <div
        className="primaryFont black"
      >
         
        <span
          className="graphText"
        >
          1,923
           cals 
        </span>
        <i
          className="fas fa-fire-alt"
        />
      </div>
      <div
        className="primaryFont black"
      >
        <span
          className="graphText"
        >
          117
           kg 
        </span>
        <i
          className="fas fa-hiking"
        />
      </div>
    </div>
    <div
      className="iconButtonContainer sticky"
    >
      <i
        className="fas fa-arrow-circle-left skin arrowButtons"
        onClick={[Function]}
      />
      <i
        className="fas fa-arrow-circle-right skin forward arrowButtons"
        onClick={[Function]}
      />
    </div>
    <h2
      className="montebello black sticky resultsTitle"
    >
      <div
        className=" montebello black sticky resultsTitle"
      >
        <div>
          Escalante
        </div>
         Results! 
        <div
          className="montebello"
        >
          <time
            dateTime={"2019-03-23T09:25:43.511Z"}
          >
            2019
          </time>
        </div>
      </div>
    </h2>
    <div
      className="iconButtonContainer"
    >
      <button
        className="tooltip iconButtons"
      >
        <i
          className="fas fa-paw black"
          onClick={[Function]}
          type="submit"
        >
          <span
            className="tooltiptext primaryFont white"
          >
            print
          </span>
        </i>
      </button>
      <div
        className="primaryFont white redBackground moreButton sticky"
        onClick={[Function]}
      >
        delete selected
        <span
          className="primaryFont text"
        >
          : 
          
        </span>
      </div>
    </div>
    <div
      className="filterButtonContainer moreContainer sticky"
    >
      <a
        aria-current={null}
        className="hidden"
        href="/trip-filter/undefined"
        onClick={[Function]}
      >
        <div
          className="primaryFont red skinBackground moreButton sticky"
        >
          Go to filters
        </div>
      </a>
      <a
        aria-current={null}
        href="/add-custom/undefined"
        onClick={[Function]}
      >
        <div
          className="montebello red skinBackground moreButton sticky"
        >
          Make your own item
        </div>
      </a>
      <a
        aria-current="page"
        className="active"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        <div
          className="montebello red skinBackground moreButton sticky"
        >
          Search more items
        </div>
      </a>
    </div>
  </div>
  <table
    className="primaryFont desk"
    id="results-filtered"
  >
    <tbody>
      <tr
        className="blueBackground white"
      >
        <th
          className="date"
          id="date header"
        >
          <span
            className="hidden"
          >
            Date
          </span>
          <i
            alt="date header"
            className="fas fa-calendar-day"
          />
        </th>
        <th
          className="type"
          id="item type (ie breakfast) header"
        >
          <span
            className="hidden"
          >
            Type
          </span>
          <i
            alt="item type (ie breakfast) header"
            className="fas fa-utensils"
          />
        </th>
        <th
          className="traveler"
          id="traveler name header"
        >
          <span
            className="hidden"
          >
            Traveler name
          </span>
          <i
            alt="traveler name header"
            className="fas fa-user-circle"
          />
        </th>
        <th
          className="itemH"
          id="item name header"
        >
          <span
            className="hidden"
          >
            Name
          </span>
          <i
            alt="item name header"
            className="fas fa-carrot"
          />
        </th>
        <th
          className="servingH"
          id="serving quantity header"
        >
          <span
            className="hidden"
          >
            Quantity
          </span>
          <i
            alt="serving quantity header"
            className="fas fa-coins"
          />
        </th>
        <th
          className="unitH"
          id="unit ie tablespoon or cup header"
        >
          <span
            className="hidden"
          >
            Serving unit
          </span>
          <i
            alt="unit ie tablespoon or cup header"
            className="fas fa-ruler-vertical"
          />
        </th>
        <th
          className="weightH gram"
          id="weight in grams header"
        >
          <span
            className="hidden"
          >
            Serving weight
          </span>
          <i
            alt="weight in grams header"
            className="fas fa-balance-scale"
          />
        </th>
        <th
          className="caloriesH cal calS"
          id="total calories header"
        >
          <span
            className="hidden"
          >
            Total calories
          </span>
          <i
            alt="total calories header"
            className="fas fa-fire-alt"
          />
        </th>
        <th
          className="deleteH"
          id="delete header"
        >
          <span
            className="hidden"
          >
            Delete
          </span>
          <i
            alt="delete header"
            className="fas fa-trash-alt"
          />
        </th>
      </tr>
      <tr
        className="one whiteBackground black"
      >
        <td
          className="date"
        >
          <time
            dateTime={"2020-06-27T01:41:58.150Z"}
          >
            Fri-Jun-26
          </time>
        </td>
        <td
          className="type"
        />
        <td
          className="traveler"
        />
        <td
          className="itemH"
        >
          <a
            aria-current={null}
            className="noDeco"
            href="/trip-item/1"
            onClick={[Function]}
          >
            <div
              className="purple"
            >
              apple
            </div>
          </a>
        </td>
        <td
          className="servingH black"
          headers="serving quantity header"
        >
          1
        </td>
        <td
          className="unitH"
          headers="unit ie tablespoon or cup header"
        >
          medium (3" dia)
        </td>
        <td
          className="weightH  gram"
          headers="weight in grams header"
        >
          182
           total gms
        </td>
        <td
          className="weightH  gram"
        >
          95
           total cals
        </td>
        <td
          className="delete"
        >
           
          <label
            className="tooltiptext delete"
          >
            click and confirm
            <input
              onClick={[Function]}
              type="radio"
            />
          </label>
        </td>
      </tr>
      <tr
        className="one whiteBackground black"
      >
        <td
          className="date"
        >
          <time
            dateTime={"2020-06-27T01:41:58.150Z"}
          >
            Fri-Jun-26
          </time>
        </td>
        <td
          className="type"
        />
        <td
          className="traveler"
        />
        <td
          className="itemH"
        >
          <a
            aria-current={null}
            className="noDeco"
            href="/trip-item/2"
            onClick={[Function]}
          >
            <div
              className="purple"
            >
              Granola, House Blend
            </div>
          </a>
        </td>
        <td
          className="servingH black"
          headers="serving quantity header"
        >
          1
        </td>
        <td
          className="unitH"
          headers="unit ie tablespoon or cup header"
        >
          cup
        </td>
        <td
          className="weightH  gram"
          headers="weight in grams header"
        >
          28
           total gms
        </td>
        <td
          className="weightH  gram"
        >
          500
           total cals
        </td>
        <td
          className="delete"
        >
           
          <label
            className="tooltiptext delete"
          >
            click and confirm
            <input
              onClick={[Function]}
              type="radio"
            />
          </label>
        </td>
      </tr>
      <tr
        className="one whiteBackground black"
      >
        <td
          className="date"
        >
          <time
            dateTime={"2020-06-27T01:41:58.151Z"}
          >
            Fri-Jun-26
          </time>
        </td>
        <td
          className="type"
        />
        <td
          className="traveler"
        />
        <td
          className="itemH"
        >
          <a
            aria-current={null}
            className="noDeco"
            href="/trip-item/3"
            onClick={[Function]}
          >
            <div
              className="purple"
            >
              Intense Dark Twilight Delight 72% Cacao
            </div>
          </a>
        </td>
        <td
          className="servingH black"
          headers="serving quantity header"
        >
          1
        </td>
        <td
          className="unitH"
          headers="unit ie tablespoon or cup header"
        >
          square
        </td>
        <td
          className="weightH  gram"
          headers="weight in grams header"
        >
          11
           total gms
        </td>
        <td
          className="weightH  gram"
        >
          545
           total cals
        </td>
        <td
          className="delete"
        >
           
          <label
            className="tooltiptext delete"
          >
            click and confirm
            <input
              onClick={[Function]}
              type="radio"
            />
          </label>
        </td>
      </tr>
      <tr
        className="one whiteBackground black"
      >
        <td
          className="date"
        >
          <time
            dateTime={"2020-06-27T01:41:58.151Z"}
          >
            Fri-Jun-26
          </time>
        </td>
        <td
          className="type"
        />
        <td
          className="traveler"
        />
        <td
          className="itemH"
        >
          <a
            aria-current={null}
            className="noDeco"
            href="/trip-item/4"
            onClick={[Function]}
          >
            <div
              className="purple"
            >
              Beef Jerky
            </div>
          </a>
        </td>
        <td
          className="servingH black"
          headers="serving quantity header"
        >
          1
        </td>
        <td
          className="unitH"
          headers="unit ie tablespoon or cup header"
        >
          oz
        </td>
        <td
          className="weightH  gram"
          headers="weight in grams header"
        >
          28
           total gms
        </td>
        <td
          className="weightH  gram"
        >
          383
           total cals
        </td>
        <td
          className="delete"
        >
           
          <label
            className="tooltiptext delete"
          >
            click and confirm
            <input
              onClick={[Function]}
              type="radio"
            />
          </label>
        </td>
      </tr>
      <tr
        className="one whiteBackground black"
      >
        <td
          className="date"
        >
          <time
            dateTime={"2020-06-27T01:41:58.152Z"}
          >
            Fri-Jun-26
          </time>
        </td>
        <td
          className="type"
        />
        <td
          className="traveler"
        />
        <td
          className="itemH"
        >
          <a
            aria-current={null}
            className="noDeco"
            href="/trip-item/5"
            onClick={[Function]}
          >
            <div
              className="purple"
            >
              dry red lentils
            </div>
          </a>
        </td>
        <td
          className="servingH black"
          headers="serving quantity header"
        >
          1
        </td>
        <td
          className="unitH"
          headers="unit ie tablespoon or cup header"
        >
          cup
        </td>
        <td
          className="weightH  gram"
          headers="weight in grams header"
        >
          192
           total gms
        </td>
        <td
          className="weightH  gram"
        >
          358
           total cals
        </td>
        <td
          className="delete"
        >
           
          <label
            className="tooltiptext delete"
          >
            click and confirm
            <input
              onClick={[Function]}
              type="radio"
            />
          </label>
        </td>
      </tr>
      <tr
        className="one whiteBackground black"
      >
        <td
          className="date"
        >
          <time
            dateTime={"2020-06-27T01:41:58.152Z"}
          >
            Fri-Jun-26
          </time>
        </td>
        <td
          className="type"
        />
        <td
          className="traveler"
        />
        <td
          className="itemH"
        >
          <a
            aria-current={null}
            className="noDeco"
            href="/trip-item/6"
            onClick={[Function]}
          >
            <div
              className="purple"
            >
              hard parmesan
            </div>
          </a>
        </td>
        <td
          className="servingH black"
          headers="serving quantity header"
        >
          1
        </td>
        <td
          className="unitH"
          headers="unit ie tablespoon or cup header"
        >
          tsp
        </td>
        <td
          className="weightH  gram"
          headers="weight in grams header"
        >
          5
           total gms
        </td>
        <td
          className="weightH  gram"
        >
          21
           total cals
        </td>
        <td
          className="delete"
        >
           
          <label
            className="tooltiptext delete"
          >
            click and confirm
            <input
              onClick={[Function]}
              type="radio"
            />
          </label>
        </td>
      </tr>
      <tr
        className="one whiteBackground black"
      >
        <td
          className="date"
        >
          <time
            dateTime={"2020-06-27T01:41:58.153Z"}
          >
            Fri-Jun-26
          </time>
        </td>
        <td
          className="type"
        />
        <td
          className="traveler"
        />
        <td
          className="itemH"
        >
          <a
            aria-current={null}
            className="noDeco"
            href="/trip-item/7"
            onClick={[Function]}
          >
            <div
              className="purple"
            >
              doggieKibble
            </div>
          </a>
        </td>
        <td
          className="servingH black"
          headers="serving quantity header"
        >
          1
        </td>
        <td
          className="unitH"
          headers="unit ie tablespoon or cup header"
        >
          tsp
        </td>
        <td
          className="weightH  gram"
          headers="weight in grams header"
        >
          5
           total gms
        </td>
        <td
          className="weightH  gram"
        >
          21
           total cals
        </td>
        <td
          className="delete"
        >
           
          <label
            className="tooltiptext delete"
          >
            click and confirm
            <input
              onClick={[Function]}
              type="radio"
            />
          </label>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    className="primaryFont whiteBackground mobileOnly"
    id="results-filtered"
  >
    <tbody>
      <tr
        className="mobile"
      >
        <td
          className="noBorder"
        >
          <img
            alt=""
            className="tableImage "
            src="https://nix-tag-images.s3.amazonaws.com/384_thumb.jpg"
          />
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr
        className="itemH"
      >
        <th
          className="itemH"
          id="item name header"
        >
          <span
            className="hidden"
          >
            Name
          </span>
          <i
            alt="item name header"
            className="fas fa-carrot"
          />
        </th>
        <td>
          <a
            aria-current={null}
            className="noDeco"
            href="/trip-item/1"
            onClick={[Function]}
          >
            <div
              className="purple"
            >
              apple
            </div>
          </a>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="brandH"
          id="brand header"
        >
          <span
            className="hidden"
          >
            Brand
          </span>
          <i
            alt="brand header"
            className="fas fa-tag"
          />
        </th>
        <td
          className="brandId"
          headers="brand header"
        >
          common
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="date"
          id="date header"
        >
          <span
            className="hidden"
          >
            Date
          </span>
          <i
            alt="date header"
            className="fas fa-calendar-day"
          />
        </th>
        <td
          className="date"
        >
          <time
            dateTime={"2020-06-27T01:41:58.154Z"}
          >
            Fri-Jun-26
          </time>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="type"
          id="item type (ie breakfast) header"
        >
          <span
            className="hidden"
          >
            Type
          </span>
          <i
            alt="item type (ie breakfast) header"
            className="fas fa-utensils"
          />
        </th>
        <td
          className="type"
        />
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="traveler"
          id="traveler name header"
        >
          <span
            className="hidden"
          >
            Traveler name
          </span>
          <i
            alt="traveler name header"
            className="fas fa-user-circle"
          />
        </th>
        <td
          className="type"
        />
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="unitH"
          id="unit ie tablespoon or cup header"
        >
          <span
            className="hidden"
          >
            Serving unit
          </span>
          <i
            alt="unit ie tablespoon or cup header"
            className="fas fa-ruler-vertical"
          />
        </th>
        <td
          className="unitH"
          headers="unit ie tablespoon or cup header"
        >
          medium (3" dia)
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="servingH"
          id="serving quantity header"
        >
          <span
            className="hidden"
          >
            Quantity
          </span>
          <i
            alt="serving quantity header"
            className="fas fa-coins"
          />
        </th>
        <td
          className="servingH black"
          headers="serving quantity header"
        >
          1
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="weightH gram"
          id="weight in grams header"
        >
          <span
            className="hidden"
          >
            Serving weight
          </span>
          <i
            alt="weight in grams header"
            className="fas fa-balance-scale"
          />
        </th>
        <td
          className="weightH  gram"
          headers="weight in grams header"
        >
          182
           total gms
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="caloriesH cal calS"
          id="total calories header"
        >
          <span
            className="hidden"
          >
            Total calories
          </span>
          <i
            alt="total calories header"
            className="fas fa-fire-alt"
          />
        </th>
        <td
          className="weightH  gram"
        >
          95
           total cals
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="deleteH"
          id="delete header"
        >
          <span
            className="hidden"
          >
            Delete
          </span>
          <i
            alt="delete header"
            className="fas fa-trash-alt"
          />
        </th>
        <td
          className="delete"
        >
           
          <label
            className="tooltiptext delete"
          >
            click and confirm
            <input
              onClick={[Function]}
              type="radio"
            />
          </label>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    className="primaryFont whiteBackground mobileOnly"
    id="results-filtered"
  >
    <tbody>
      <tr
        className="mobile"
      >
        <td
          className="noBorder"
        >
          <img
            alt=""
            className="tableImage "
            src="https://nutritionix-api.s3.amazonaws.com/5572031b36869fb5124af830.jpeg"
          />
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr
        className="itemH"
      >
        <th
          className="itemH"
          id="item name header"
        >
          <span
            className="hidden"
          >
            Name
          </span>
          <i
            alt="item name header"
            className="fas fa-carrot"
          />
        </th>
        <td>
          <a
            aria-current={null}
            className="noDeco"
            href="/trip-item/2"
            onClick={[Function]}
          >
            <div
              className="purple"
            >
              Granola, House Blend
            </div>
          </a>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="brandH"
          id="brand header"
        >
          <span
            className="hidden"
          >
            Brand
          </span>
          <i
            alt="brand header"
            className="fas fa-tag"
          />
        </th>
        <td
          className="brandId"
          headers="brand header"
        >
          House Granola
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="date"
          id="date header"
        >
          <span
            className="hidden"
          >
            Date
          </span>
          <i
            alt="date header"
            className="fas fa-calendar-day"
          />
        </th>
        <td
          className="date"
        >
          <time
            dateTime={"2020-06-27T01:41:58.155Z"}
          >
            Fri-Jun-26
          </time>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="type"
          id="item type (ie breakfast) header"
        >
          <span
            className="hidden"
          >
            Type
          </span>
          <i
            alt="item type (ie breakfast) header"
            className="fas fa-utensils"
          />
        </th>
        <td
          className="type"
        />
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="traveler"
          id="traveler name header"
        >
          <span
            className="hidden"
          >
            Traveler name
          </span>
          <i
            alt="traveler name header"
            className="fas fa-user-circle"
          />
        </th>
        <td
          className="type"
        />
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="unitH"
          id="unit ie tablespoon or cup header"
        >
          <span
            className="hidden"
          >
            Serving unit
          </span>
          <i
            alt="unit ie tablespoon or cup header"
            className="fas fa-ruler-vertical"
          />
        </th>
        <td
          className="unitH"
          headers="unit ie tablespoon or cup header"
        >
          cup
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="servingH"
          id="serving quantity header"
        >
          <span
            className="hidden"
          >
            Quantity
          </span>
          <i
            alt="serving quantity header"
            className="fas fa-coins"
          />
        </th>
        <td
          className="servingH black"
          headers="serving quantity header"
        >
          1
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="weightH gram"
          id="weight in grams header"
        >
          <span
            className="hidden"
          >
            Serving weight
          </span>
          <i
            alt="weight in grams header"
            className="fas fa-balance-scale"
          />
        </th>
        <td
          className="weightH  gram"
          headers="weight in grams header"
        >
          28
           total gms
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="caloriesH cal calS"
          id="total calories header"
        >
          <span
            className="hidden"
          >
            Total calories
          </span>
          <i
            alt="total calories header"
            className="fas fa-fire-alt"
          />
        </th>
        <td
          className="weightH  gram"
        >
          500
           total cals
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="deleteH"
          id="delete header"
        >
          <span
            className="hidden"
          >
            Delete
          </span>
          <i
            alt="delete header"
            className="fas fa-trash-alt"
          />
        </th>
        <td
          className="delete"
        >
           
          <label
            className="tooltiptext delete"
          >
            click and confirm
            <input
              onClick={[Function]}
              type="radio"
            />
          </label>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    className="primaryFont whiteBackground mobileOnly"
    id="results-filtered"
  >
    <tbody>
      <tr
        className="mobile"
      >
        <td
          className="noBorder"
        >
          <img
            alt=""
            className="tableImage "
            src="https://nix-tag-images.s3.amazonaws.com/384_thumb.jpg"
          />
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr
        className="itemH"
      >
        <th
          className="itemH"
          id="item name header"
        >
          <span
            className="hidden"
          >
            Name
          </span>
          <i
            alt="item name header"
            className="fas fa-carrot"
          />
        </th>
        <td>
          <a
            aria-current={null}
            className="noDeco"
            href="/trip-item/3"
            onClick={[Function]}
          >
            <div
              className="purple"
            >
              Intense Dark Twilight Delight 72% Cacao
            </div>
          </a>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="brandH"
          id="brand header"
        >
          <span
            className="hidden"
          >
            Brand
          </span>
          <i
            alt="brand header"
            className="fas fa-tag"
          />
        </th>
        <td
          className="brandId"
          headers="brand header"
        >
          Ghirardelli Chocolate
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="date"
          id="date header"
        >
          <span
            className="hidden"
          >
            Date
          </span>
          <i
            alt="date header"
            className="fas fa-calendar-day"
          />
        </th>
        <td
          className="date"
        >
          <time
            dateTime={"2020-06-27T01:41:58.156Z"}
          >
            Fri-Jun-26
          </time>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="type"
          id="item type (ie breakfast) header"
        >
          <span
            className="hidden"
          >
            Type
          </span>
          <i
            alt="item type (ie breakfast) header"
            className="fas fa-utensils"
          />
        </th>
        <td
          className="type"
        />
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="traveler"
          id="traveler name header"
        >
          <span
            className="hidden"
          >
            Traveler name
          </span>
          <i
            alt="traveler name header"
            className="fas fa-user-circle"
          />
        </th>
        <td
          className="type"
        />
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="unitH"
          id="unit ie tablespoon or cup header"
        >
          <span
            className="hidden"
          >
            Serving unit
          </span>
          <i
            alt="unit ie tablespoon or cup header"
            className="fas fa-ruler-vertical"
          />
        </th>
        <td
          className="unitH"
          headers="unit ie tablespoon or cup header"
        >
          square
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="servingH"
          id="serving quantity header"
        >
          <span
            className="hidden"
          >
            Quantity
          </span>
          <i
            alt="serving quantity header"
            className="fas fa-coins"
          />
        </th>
        <td
          className="servingH black"
          headers="serving quantity header"
        >
          1
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="weightH gram"
          id="weight in grams header"
        >
          <span
            className="hidden"
          >
            Serving weight
          </span>
          <i
            alt="weight in grams header"
            className="fas fa-balance-scale"
          />
        </th>
        <td
          className="weightH  gram"
          headers="weight in grams header"
        >
          11
           total gms
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="caloriesH cal calS"
          id="total calories header"
        >
          <span
            className="hidden"
          >
            Total calories
          </span>
          <i
            alt="total calories header"
            className="fas fa-fire-alt"
          />
        </th>
        <td
          className="weightH  gram"
        >
          545
           total cals
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="deleteH"
          id="delete header"
        >
          <span
            className="hidden"
          >
            Delete
          </span>
          <i
            alt="delete header"
            className="fas fa-trash-alt"
          />
        </th>
        <td
          className="delete"
        >
           
          <label
            className="tooltiptext delete"
          >
            click and confirm
            <input
              onClick={[Function]}
              type="radio"
            />
          </label>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    className="primaryFont whiteBackground mobileOnly"
    id="results-filtered"
  >
    <tbody>
      <tr
        className="mobile"
      >
        <td
          className="noBorder"
        >
          <img
            alt=""
            className="tableImage "
            src="https://nutritionix-api.s3.amazonaws.com/55312801c07cd0fd571ee6ee.jpeg"
          />
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr
        className="itemH"
      >
        <th
          className="itemH"
          id="item name header"
        >
          <span
            className="hidden"
          >
            Name
          </span>
          <i
            alt="item name header"
            className="fas fa-carrot"
          />
        </th>
        <td>
          <a
            aria-current={null}
            className="noDeco"
            href="/trip-item/4"
            onClick={[Function]}
          >
            <div
              className="purple"
            >
              Beef Jerky
            </div>
          </a>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="brandH"
          id="brand header"
        >
          <span
            className="hidden"
          >
            Brand
          </span>
          <i
            alt="brand header"
            className="fas fa-tag"
          />
        </th>
        <td
          className="brandId"
          headers="brand header"
        >
          Lawless Jerky
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="date"
          id="date header"
        >
          <span
            className="hidden"
          >
            Date
          </span>
          <i
            alt="date header"
            className="fas fa-calendar-day"
          />
        </th>
        <td
          className="date"
        >
          <time
            dateTime={"2020-06-27T01:41:58.157Z"}
          >
            Fri-Jun-26
          </time>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="type"
          id="item type (ie breakfast) header"
        >
          <span
            className="hidden"
          >
            Type
          </span>
          <i
            alt="item type (ie breakfast) header"
            className="fas fa-utensils"
          />
        </th>
        <td
          className="type"
        />
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="traveler"
          id="traveler name header"
        >
          <span
            className="hidden"
          >
            Traveler name
          </span>
          <i
            alt="traveler name header"
            className="fas fa-user-circle"
          />
        </th>
        <td
          className="type"
        />
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="unitH"
          id="unit ie tablespoon or cup header"
        >
          <span
            className="hidden"
          >
            Serving unit
          </span>
          <i
            alt="unit ie tablespoon or cup header"
            className="fas fa-ruler-vertical"
          />
        </th>
        <td
          className="unitH"
          headers="unit ie tablespoon or cup header"
        >
          oz
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="servingH"
          id="serving quantity header"
        >
          <span
            className="hidden"
          >
            Quantity
          </span>
          <i
            alt="serving quantity header"
            className="fas fa-coins"
          />
        </th>
        <td
          className="servingH black"
          headers="serving quantity header"
        >
          1
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="weightH gram"
          id="weight in grams header"
        >
          <span
            className="hidden"
          >
            Serving weight
          </span>
          <i
            alt="weight in grams header"
            className="fas fa-balance-scale"
          />
        </th>
        <td
          className="weightH  gram"
          headers="weight in grams header"
        >
          28
           total gms
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="caloriesH cal calS"
          id="total calories header"
        >
          <span
            className="hidden"
          >
            Total calories
          </span>
          <i
            alt="total calories header"
            className="fas fa-fire-alt"
          />
        </th>
        <td
          className="weightH  gram"
        >
          383
           total cals
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="deleteH"
          id="delete header"
        >
          <span
            className="hidden"
          >
            Delete
          </span>
          <i
            alt="delete header"
            className="fas fa-trash-alt"
          />
        </th>
        <td
          className="delete"
        >
           
          <label
            className="tooltiptext delete"
          >
            click and confirm
            <input
              onClick={[Function]}
              type="radio"
            />
          </label>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    className="primaryFont whiteBackground mobileOnly"
    id="results-filtered"
  >
    <tbody>
      <tr
        className="mobile"
      >
        <td
          className="noBorder"
        >
          <img
            alt=""
            className="tableImage "
            src="https://nix-tag-images.s3.amazonaws.com/230_thumb.jpg"
          />
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr
        className="itemH"
      >
        <th
          className="itemH"
          id="item name header"
        >
          <span
            className="hidden"
          >
            Name
          </span>
          <i
            alt="item name header"
            className="fas fa-carrot"
          />
        </th>
        <td>
          <a
            aria-current={null}
            className="noDeco"
            href="/trip-item/5"
            onClick={[Function]}
          >
            <div
              className="purple"
            >
              dry red lentils
            </div>
          </a>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="brandH"
          id="brand header"
        >
          <span
            className="hidden"
          >
            Brand
          </span>
          <i
            alt="brand header"
            className="fas fa-tag"
          />
        </th>
        <td
          className="brandId"
          headers="brand header"
        >
          common
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="date"
          id="date header"
        >
          <span
            className="hidden"
          >
            Date
          </span>
          <i
            alt="date header"
            className="fas fa-calendar-day"
          />
        </th>
        <td
          className="date"
        >
          <time
            dateTime={"2020-06-27T01:41:58.158Z"}
          >
            Fri-Jun-26
          </time>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="type"
          id="item type (ie breakfast) header"
        >
          <span
            className="hidden"
          >
            Type
          </span>
          <i
            alt="item type (ie breakfast) header"
            className="fas fa-utensils"
          />
        </th>
        <td
          className="type"
        />
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="traveler"
          id="traveler name header"
        >
          <span
            className="hidden"
          >
            Traveler name
          </span>
          <i
            alt="traveler name header"
            className="fas fa-user-circle"
          />
        </th>
        <td
          className="type"
        />
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="unitH"
          id="unit ie tablespoon or cup header"
        >
          <span
            className="hidden"
          >
            Serving unit
          </span>
          <i
            alt="unit ie tablespoon or cup header"
            className="fas fa-ruler-vertical"
          />
        </th>
        <td
          className="unitH"
          headers="unit ie tablespoon or cup header"
        >
          cup
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="servingH"
          id="serving quantity header"
        >
          <span
            className="hidden"
          >
            Quantity
          </span>
          <i
            alt="serving quantity header"
            className="fas fa-coins"
          />
        </th>
        <td
          className="servingH black"
          headers="serving quantity header"
        >
          1
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="weightH gram"
          id="weight in grams header"
        >
          <span
            className="hidden"
          >
            Serving weight
          </span>
          <i
            alt="weight in grams header"
            className="fas fa-balance-scale"
          />
        </th>
        <td
          className="weightH  gram"
          headers="weight in grams header"
        >
          192
           total gms
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="caloriesH cal calS"
          id="total calories header"
        >
          <span
            className="hidden"
          >
            Total calories
          </span>
          <i
            alt="total calories header"
            className="fas fa-fire-alt"
          />
        </th>
        <td
          className="weightH  gram"
        >
          358
           total cals
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="deleteH"
          id="delete header"
        >
          <span
            className="hidden"
          >
            Delete
          </span>
          <i
            alt="delete header"
            className="fas fa-trash-alt"
          />
        </th>
        <td
          className="delete"
        >
           
          <label
            className="tooltiptext delete"
          >
            click and confirm
            <input
              onClick={[Function]}
              type="radio"
            />
          </label>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    className="primaryFont whiteBackground mobileOnly"
    id="results-filtered"
  >
    <tbody>
      <tr
        className="mobile"
      >
        <td
          className="noBorder"
        >
          <img
            alt=""
            className="tableImage "
            src="https://nix-tag-images.s3.amazonaws.com/5149_thumb.jpg"
          />
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr
        className="itemH"
      >
        <th
          className="itemH"
          id="item name header"
        >
          <span
            className="hidden"
          >
            Name
          </span>
          <i
            alt="item name header"
            className="fas fa-carrot"
          />
        </th>
        <td>
          <a
            aria-current={null}
            className="noDeco"
            href="/trip-item/6"
            onClick={[Function]}
          >
            <div
              className="purple"
            >
              hard parmesan
            </div>
          </a>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="brandH"
          id="brand header"
        >
          <span
            className="hidden"
          >
            Brand
          </span>
          <i
            alt="brand header"
            className="fas fa-tag"
          />
        </th>
        <td
          className="brandId"
          headers="brand header"
        >
          common
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="date"
          id="date header"
        >
          <span
            className="hidden"
          >
            Date
          </span>
          <i
            alt="date header"
            className="fas fa-calendar-day"
          />
        </th>
        <td
          className="date"
        >
          <time
            dateTime={"2020-06-27T01:41:58.159Z"}
          >
            Fri-Jun-26
          </time>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="type"
          id="item type (ie breakfast) header"
        >
          <span
            className="hidden"
          >
            Type
          </span>
          <i
            alt="item type (ie breakfast) header"
            className="fas fa-utensils"
          />
        </th>
        <td
          className="type"
        />
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="traveler"
          id="traveler name header"
        >
          <span
            className="hidden"
          >
            Traveler name
          </span>
          <i
            alt="traveler name header"
            className="fas fa-user-circle"
          />
        </th>
        <td
          className="type"
        />
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="unitH"
          id="unit ie tablespoon or cup header"
        >
          <span
            className="hidden"
          >
            Serving unit
          </span>
          <i
            alt="unit ie tablespoon or cup header"
            className="fas fa-ruler-vertical"
          />
        </th>
        <td
          className="unitH"
          headers="unit ie tablespoon or cup header"
        >
          tsp
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="servingH"
          id="serving quantity header"
        >
          <span
            className="hidden"
          >
            Quantity
          </span>
          <i
            alt="serving quantity header"
            className="fas fa-coins"
          />
        </th>
        <td
          className="servingH black"
          headers="serving quantity header"
        >
          1
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="weightH gram"
          id="weight in grams header"
        >
          <span
            className="hidden"
          >
            Serving weight
          </span>
          <i
            alt="weight in grams header"
            className="fas fa-balance-scale"
          />
        </th>
        <td
          className="weightH  gram"
          headers="weight in grams header"
        >
          5
           total gms
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="caloriesH cal calS"
          id="total calories header"
        >
          <span
            className="hidden"
          >
            Total calories
          </span>
          <i
            alt="total calories header"
            className="fas fa-fire-alt"
          />
        </th>
        <td
          className="weightH  gram"
        >
          21
           total cals
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="deleteH"
          id="delete header"
        >
          <span
            className="hidden"
          >
            Delete
          </span>
          <i
            alt="delete header"
            className="fas fa-trash-alt"
          />
        </th>
        <td
          className="delete"
        >
           
          <label
            className="tooltiptext delete"
          >
            click and confirm
            <input
              onClick={[Function]}
              type="radio"
            />
          </label>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    className="primaryFont whiteBackground mobileOnly"
    id="results-filtered"
  >
    <tbody>
      <tr
        className="mobile"
      >
        <td
          className="noBorder"
        >
          <img
            alt=""
            className="tableImage "
            src="https://d2eawub7utcl6.cloudfront.net/images/nix-apple-grey.png"
          />
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr
        className="itemH"
      >
        <th
          className="itemH"
          id="item name header"
        >
          <span
            className="hidden"
          >
            Name
          </span>
          <i
            alt="item name header"
            className="fas fa-carrot"
          />
        </th>
        <td>
          <a
            aria-current={null}
            className="noDeco"
            href="/trip-item/7"
            onClick={[Function]}
          >
            <div
              className="purple"
            >
              doggieKibble
            </div>
          </a>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="brandH"
          id="brand header"
        >
          <span
            className="hidden"
          >
            Brand
          </span>
          <i
            alt="brand header"
            className="fas fa-tag"
          />
        </th>
        <td
          className="brandId"
          headers="brand header"
        >
          common
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="date"
          id="date header"
        >
          <span
            className="hidden"
          >
            Date
          </span>
          <i
            alt="date header"
            className="fas fa-calendar-day"
          />
        </th>
        <td
          className="date"
        >
          <time
            dateTime={"2020-06-27T01:41:58.160Z"}
          >
            Fri-Jun-26
          </time>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="type"
          id="item type (ie breakfast) header"
        >
          <span
            className="hidden"
          >
            Type
          </span>
          <i
            alt="item type (ie breakfast) header"
            className="fas fa-utensils"
          />
        </th>
        <td
          className="type"
        />
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="traveler"
          id="traveler name header"
        >
          <span
            className="hidden"
          >
            Traveler name
          </span>
          <i
            alt="traveler name header"
            className="fas fa-user-circle"
          />
        </th>
        <td
          className="type"
        />
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="unitH"
          id="unit ie tablespoon or cup header"
        >
          <span
            className="hidden"
          >
            Serving unit
          </span>
          <i
            alt="unit ie tablespoon or cup header"
            className="fas fa-ruler-vertical"
          />
        </th>
        <td
          className="unitH"
          headers="unit ie tablespoon or cup header"
        >
          tsp
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="servingH"
          id="serving quantity header"
        >
          <span
            className="hidden"
          >
            Quantity
          </span>
          <i
            alt="serving quantity header"
            className="fas fa-coins"
          />
        </th>
        <td
          className="servingH black"
          headers="serving quantity header"
        >
          1
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="weightH gram"
          id="weight in grams header"
        >
          <span
            className="hidden"
          >
            Serving weight
          </span>
          <i
            alt="weight in grams header"
            className="fas fa-balance-scale"
          />
        </th>
        <td
          className="weightH  gram"
          headers="weight in grams header"
        >
          5
           total gms
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="caloriesH cal calS"
          id="total calories header"
        >
          <span
            className="hidden"
          >
            Total calories
          </span>
          <i
            alt="total calories header"
            className="fas fa-fire-alt"
          />
        </th>
        <td
          className="weightH  gram"
        >
          21
           total cals
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <th
          className="deleteH"
          id="delete header"
        >
          <span
            className="hidden"
          >
            Delete
          </span>
          <i
            alt="delete header"
            className="fas fa-trash-alt"
          />
        </th>
        <td
          className="delete"
        >
           
          <label
            className="tooltiptext delete"
          >
            click and confirm
            <input
              onClick={[Function]}
              type="radio"
            />
          </label>
        </td>
      </tr>
    </tbody>
  </table>
</section>
`;

exports[`renders the UI as expected 2`] = `
<section>
  <div
    className="sticky lightBlueBackground"
  >
    <div
      className="sticky"
    >
      <div
        className="iconButtonsContainer"
      >
        <div
          className="back"
        >
          <i
            className="fas fa-arrow-circle-left skin arrowButtons"
            onClick={[Function]}
          />
        </div>
        <div
          className="forward"
        >
          <i
            className="fas fa-arrow-circle-right skin forward arrowButtons"
            onClick={[Function]}
          />
        </div>
      </div>
      <h2
        className="montebello searchResultsTitle black"
      >
         
        See your highest energy results!
      </h2>
    </div>
    <div
      className="iconButtonContainer"
    >
      <button
        className="tooltip iconButtons"
      >
        <i
          className="fas fa-paw black"
          onClick={[Function]}
          type="submit"
        >
          <span
            className="tooltiptext primaryFont white"
          >
            print
          </span>
        </i>
      </button>
      <span
        className="mobileHide"
      >
        <button
          className="tooltip iconButtons"
        >
          <i
            className="fas fa-archive black"
            type="submit"
          >
            <span
              className="tooltiptext primaryFont white"
            >
              save
            </span>
          </i>
        </button>
      </span>
    </div>
    <div
      className="filterButtonContainer moreContainer"
    >
      <a
        aria-current={null}
        href="/add-custom"
        onClick={[Function]}
      >
        <div
          className="montebello red skinBackground moreButton sticky"
        >
          Make your own item
        </div>
      </a>
      <a
        aria-current="page"
        className="active"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        <div
          className="montebello red skinBackground moreButton sticky"
        >
          Search more items
        </div>
      </a>
    </div>
  </div>
  <table
    className="primaryFont desk"
    id="search-results"
  >
    <thead
      className="blueBackground white"
    >
      <tr>
        <th
          className="imageH tableAdjust"
          id="image header"
        >
          <span
            className="hidden"
          >
            Image
          </span>
        </th>
        <th
          className="itemH"
          id="item name header"
        >
          <span
            className="hidden"
          >
            Name
          </span>
          <i
            alt="item name header"
            className="fas fa-carrot"
          />
        </th>
        <th
          className="brandH"
          id="brand header"
        >
          <span
            className="hidden"
          >
            Brand
          </span>
          <i
            alt="brand header"
            className="fas fa-tag"
          />
        </th>
        <th
          className="servingH"
          id="serving quantity header"
        >
          <span
            className="hidden"
          >
            Quantity
          </span>
          <i
            alt="serving quantity header"
            className="fas fa-coins"
          />
        </th>
        <th
          className="unitH"
          id="unit ie tablespoon or cup header"
        >
          <span
            className="hidden"
          >
            Serving unit
          </span>
          <i
            alt="unit ie tablespoon or cup header"
            className="fas fa-ruler-vertical"
          />
        </th>
        <th
          className="weightH gram"
          id="weight in grams header"
        >
          <span
            className="hidden"
          >
            Serving weight
          </span>
          <i
            alt="weight in grams header"
            className="fas fa-balance-scale"
          />
        </th>
        <th
          className="caloriesH cal calS"
          id="total calories header"
        >
          <span
            className="hidden"
          >
            Total calories
          </span>
          <i
            alt="total calories header"
            className="fas fa-fire-alt"
          />
        </th>
        <th
          className="caloriesH"
          id="total calories per 100grams header"
        >
          <span
            className="hidden"
          >
            Total calories per 100 grams
          </span>
          <i
            alt="total calories per 100grams header"
            className="fab fa-superpowers super"
          />
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</section>
`;
